<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/HeaderText"
        android:background="@drawable/title_background"
        android:textColor="#DF5E43"
        android:textStyle="bold"
        android:textSize="23sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FirstTextView"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterSize"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"

            android:ems="10"
            android:background="@drawable/background_shape"
            android:hint="@string/FirstEditHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/EnterButton" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SecondLabel"
            android:textSize="12sp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/enterArrOne"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/background_shape"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/limit"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/btnArrOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnArray1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/enterArrTwo"
            android:layout_width="wrap_content"

            android:layout_height="40dp"
            android:background="@drawable/background_shape"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="0  -  255"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnArrTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/BtnArray2" />

    </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Array 1 :"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dispArrOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..items.."
            android:paddingLeft="50dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Array 2 :"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/dispArrTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..items.."
            android:paddingLeft="50dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/BtnCompute" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InitialFactor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dispFactor"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/background_shape"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NormalizedArray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dispArrNorm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/background_shape"

            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="clear" />





</LinearLayout>